# PaytollControl

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  requirements.txt  run.py
projects/payroll-control/: AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  run.py
projects/players-contract/: CLAUDE.md  PLAN.md  pyproject.toml  run.py
projects/players-contract/data-for-test/: read_pdf.py
projects/players-contract/src/players_contract/export/: contract_salary_mapper.py  excel_mapper.py
projects/players-contract/src/players_contract/factories/: factory.py
projects/players-contract/src/players_contract/features/contract_salary/: extractor.py  mapper.py  model.py  prompt.py  register.py
projects/players-contract/tests/unit/: test_contract_salary_extractor.py  test_contract_salary_mapper.py
src/payroll_control/abstractions/: __init__.py  cost_logger.py  language_model.py  schema_detector.py
src/payroll_control/config/: pricing.py  settings.py
src/payroll_control/core/: excel_pipeline.py  feature_registry.py  pipeline.py
src/payroll_control/factories/: factory.py
src/payroll_control/features/excel_attendance/: model.py  prompt.py  record_builder.py
src/payroll_control/implementations/: csv_cost_logger.py  gemini_model.py  json_status_tracker.py  llm_schema_detector.py  page_rotator.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_excel_attendance_record_builder.py  test_excel_pipeline.py  test_json_status_tracker.py  test_llm_schema_detector.py
